[project]
name = "uenv-venv"
version = "0.1.0"
description = "Create a Python venv layered on top of an active uenv (view) cleanly and predictably."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "boeschf" }]
keywords = ["venv", "uv", "uenv", "virtualenv", "site-packages"]

[project.scripts]
uenv-venv = "uenv_venv.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Ruff: linter + formatter
[tool.ruff]
target-version = "py39"
line-length = 100
lint.select = ["E", "F", "I", "UP", "B"]  # pyflakes/pycodestyle/isort/pyupgrade/bugbear
lint.ignore = [
  "E203",  # whitespace before ':'
  "E501",  # line length
]
format.preview = true

[tool.ruff.lint.isort]
known-first-party = ["uenv_venv"]

